# nexusalloc

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmarks/: CMakeLists.txt  bench_allocator.cpp  bench_comparison.cpp
include/nexusalloc/: allocator.hpp  atomic_stack.hpp  hugepage_provider.hpp  nexusalloc.hpp  slab.hpp  thread_arena.hpp
include/nexusalloc/internal/: alignment.hpp  bitmap.hpp  prefetch.hpp  size_class.hpp
tests/: CMakeLists.txt  test_allocator.cpp  test_atomic_stack.cpp  test_bitmap.cpp  test_size_class.cpp  test_slab.cpp  test_stress.cpp  test_thread_arena.cpp
